[style] Title: Cleaned up various things; Description: editted logout so it displays a flash instead of going to a new page; fixed the flash on various pages; fixed the spacing of the new profile pages to all be the same; added a method to the users controller to show the user when they have created a new profile

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -107,10 +107,6 @@
   font-weight: 300;
 }
 
-.signup-box {
-  margin: 70px auto;
-}
-
 .map-box {
   width: 400px;
 }
